Thu Jun 16 05:56:59 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Simplify probe for PHP CLI - we dropped PHP4 support in
	  1.1.0 so we can rely on having php-config --php-binary available.

Wed Jun 15 14:13:09 GMT 2011  Olly Betts <olly@survex.com>

	* README,configure.ac,python/docs/index.html: Update required Python
	  version to 2.4.

Wed Jun 15 07:46:04 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-bindings/lua/docs/examples/simpleexpand.lua: Don't try to add
	  anything to the RSet if there are no matches.

Tue Jun 14 03:50:57 GMT 2011  Olly Betts <olly@survex.com>

	* perl/t/symbol-test/SymbolTest.pm: Sync update from XS Search::Xapian
	  - add "1;" to end of test module.

Tue Jun 14 03:48:04 GMT 2011  Olly Betts <olly@survex.com>

	* perl/docs/examples/: Sync updates from XS Search::Xapian: Require
	  Perl >= 5.6 so we can "use warnings;"; loop over file using while()
	  (which reads a line per iteration) not foreach() (which reads the
	  whole file up front).

Mon Jun 13 17:00:27 GMT 2011  Olly Betts <olly@survex.com>

	* perl/generate-perl-exceptions: Simplify.

Mon Jun 13 16:49:52 GMT 2011  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java-swig/Makefile.am,
	  perl/generate-perl-exceptions,python/generate-python-exceptions:
	  More references to Sorter and MultiValueSorter removed.

Mon Jun 13 16:43:58 GMT 2011  Olly Betts <olly@survex.com>

	* perl/t/sorter.t,php/smoketest.php,python/pythontest2.py,xapian.i:
	  Update in line with the removed deprecations from xapian-core.

Mon Jun 13 13:37:48 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/extra.i: Change function names defined inside wrapper()
	  closures to match the name which the result of the closure will
	  be assigned to, so that help text for the functions displays the
	  correct function name.

Mon Jun 13 13:15:00 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/pythontest2.py: Extend coverage of tests of removed features.
