@@ -45,9 +45,8 @@ Perl		Perl XS bindings contributed by Alex Bowley and co-maintained
 		are satisfied they are stable.  The bindings here probably need
 		Perl 5.8 or later.
 
-PHP		Requires PHP 5 (PHP 4 is no longer supported by the PHP
-		developers, so it doesn't make sense for us to continue to
-		support it).
+PHP		Requires PHP >= 5.2 (older versions are no longer supported by
+		the PHP developers).
 
 Python		Requires Python 2.4 or later.  If you still need support for
 		Python 2.3, use Xapian 1.2.x.  Python 3 support is under
