@@ -9,8 +9,9 @@ API.  This document lists the differences and additions.
 </p>
 
 <p>
-As of Xapian version 1.1.0, these bindings require PHP5 (PHP4 is no longer
-supported).
+As of Xapian version 1.3.0, these bindings require at least PHP 5.2.
+(if you really need support for PHP 5.0.x or PHP 5.1.x, Xapian 1.2.x supports
+these).
 </p>
 
 <p>
