@@ -1,3 +1,10 @@
+Thu Jun 16 06:05:45 GMT 2011  Olly Betts <olly@survex.com>
+
+	* README,configure.ac,php/docs/index.html: Raise the minimum required
+	  PHP version to 5.2 as older versions are no longer supported by the
+	  PHP developers.  Even 5.2.x was recently declared unsupported
+	  upstream.
+
 Thu Jun 16 05:56:59 GMT 2011  Olly Betts <olly@survex.com>
 
 	* configure.ac: Simplify probe for PHP CLI - we dropped PHP4 support in
